stop blurring if signin form is open

--- a/src/Components/UserMenu/UserMenu.scss
+++ b/src/Components/UserMenu/UserMenu.scss
@@ -11,14 +11,4 @@
       font-size: $mediumFontSize;
       padding: 0.5vh 1vw;
     }
-    ul li:nth-child(odd) {
-      background: rgba(255, 255, 255, 0.025);
-    }
-    ul li:nth-child(even) {
-      background: rgba(0, 0, 0, 0.025);
-    }
-    ul li:hover {
-      border-bottom: $borderLight;
-      transform: scaleY(1.2);
-    }
 }
